frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aoushadhi.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aoushadhi-frontend-service
            port:
              number: 5173
  - host: www.aoushadhi.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aoushadhi-frontend-service
            port:
              number: 5173
